zeit.content.cp changes
=======================

0.30.1 (unreleased)
-------------------

- Bestätigung beim Löschen von Elementen entfernt (#6412).


0.30.0 (2009-12-11)
-------------------

- ``cp_extra`` Block hinzugefügt: linkatory

- ``cp_extra`` Block hinzugefügt: homepage_news_pics

- Teaser-Block im Autopilot: Doubletten-Vermeidung ist standardmäßig aktiviert
  (#6243).

0.29.0 (2009-11-25)
-------------------

- Fehlerhaftes Markup im Raw-XML-Block wird repariert (#6431).


0.28.1 (2009-11-04)
-------------------

- Asynchronse Requests serialisiert damit das Löschen beim Verschieben von
  Teaseren zuverlässig funktioniert.

- Bild des ersten Teasers ist jetzt draggable.

- Wird ein Teaser im CPE verschoben und auf eine Landezone gezogen, werden die
  Relateds nicht mehr automatisch gezogen.

- Default für XML-Block geändert: der <container> beinhaltet ein offenes
  <raw>-Tag (#6051).


0.28.0 (2009-11-02)
-------------------

- Teasergruppen zum Zusammenfassen von Teasern (#6385).

- Der erste Teaser eines Teaserblocks lässt sich ziehen. Wird er innerhalb der
  CP fallen gelassen, wird der gezogene Teaser aus der „Quelle“ entfernt.
  (#6384).


0.27.1 (2009-10-26)
-------------------

- Darstellung der Layout-Auswahl der Teaserleisten korrigiert.


0.27.0 (2009-10-19)
-------------------

- Es werden jetzt 6 statt nur 4 Teaser in Autopilot-Blöcken angezeigt (#6354).

- Themenseiten werden in der Site-Steuerung angezeigt (#6350).

0.26.0 (2009-10-12)
-------------------

- Blöcke im Aufmacher sind jetzt nummeriert (#6273).

- Performance der Container-Implementation verbessert.

- Hinzufügen von Blöcken über die Landeflächen im Aufmacher schneller.

- Fehlerbehandlung asynchroner Requests repariert.

- Es werden nur noch 4 Teaser in Autopilot-Blöcken angezeigt um 1. die
  Geschwindigkeit zu erhöhen und 2. das Aussehen der Seite besser
  wiederzuspiegeln

- (De-)aktivieren von Autopiloten schneller.

- Icon für freie Teaser (#6063).

- Icon für RSS-Feeds.
